ci: allow astral.sh in publish pipeline

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -28,6 +28,7 @@ jobs:
           egress-policy: block
           allowed-endpoints: >
             api.github.com:443
+            astral.sh:443
             cdn.quay.io:443
             cdn01.quay.io:443
             cdn02.quay.io:443
