--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -46,6 +46,7 @@ jobs:
             static.crates.io:443
             static.rust-lang.org:443
             uploads.github.com:443
+            release-assets.githubusercontent.com:443
 
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
       - uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c
@@ -153,7 +154,8 @@ jobs:
             api.github.com:443
             github.com:443
             uploads.github.com:443
-            static.rust-lang.org:443 
+            static.rust-lang.org:443
+            release-assets.githubusercontent.com:443
 
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
