--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,6 @@ jobs:
         run: cargo fmt --check
 
   Test:
-    continue-on-error: ${{ matrix.python-version == '3.13' }}
     env:
       UNSAFE_PYO3_SKIP_VERSION_CHECK: ${{ matrix.unsafe-pyo3-skip-version-check }}
     strategy:
@@ -50,12 +49,13 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.12"]
         allow-prereleases: [false]
-        unsafe-pyo3-skip-version-check: [0]
         include:
           - os: ubuntu-latest
             python-version: "3.13"
-            allow-prereleases: true
-            unsafe-pyo3-skip-version-check: 1
+            allow-prereleases: false
+          - os: ubuntu-latest
+            python-version: "3.12"
+            allow-prereleases: false
           - os: ubuntu-latest
             python-version: "3.11"
             allow-prereleases: false
@@ -64,9 +64,6 @@ jobs:
             allow-prereleases: false
           - os: ubuntu-latest
             python-version: 3.9
-            allow-prereleases: false
-          - os: ubuntu-latest
-            python-version: 3.8
             allow-prereleases: false
     runs-on: "${{ matrix.os }}"
     steps:
@@ -100,7 +97,7 @@ jobs:
         with:
           toolchain: "stable"
 
-      - uses: step-security/rust-cache@94e3ae6a5bdb04807deb1cb2274adab839828881 # v2.8.0
-      - run: python3 -m pip install nox
+          #- uses: Swatinem/rust-cache@23bce251a8cd2ffc3c1075eaa2367cf899916d84  # 2.7.3
+      - run: python -m pip install nox
       - run: nox -s test-${{ matrix.python-version }}
       - run: cargo test
