--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -28,6 +28,7 @@ jobs:
           egress-policy: block
           allowed-endpoints: >
             api.github.com:443
+            astral.sh:443
             cdn.quay.io:443
             cdn01.quay.io:443
             cdn02.quay.io:443
@@ -45,11 +46,12 @@ jobs:
             static.crates.io:443
             static.rust-lang.org:443
             uploads.github.com:443
+            release-assets.githubusercontent.com:443
 
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
       - uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c
         with:
-          python-version: 3.8
+          python-version: 3.9
           architecture: x64
 
       - uses: PyO3/maturin-action@86b9d133d34bc1b40018696f782949dac11bd380
@@ -57,7 +59,7 @@ jobs:
           manylinux: auto
           target: ${{ matrix.platform }}
           command: build
-          args: --release --sdist -o dist -i 3.12
+          args: --release --sdist -o dist -i 3.9 3.10 3.11 3.12 3.13
 
       - name: Upload wheels
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02  # 4.6.2
@@ -74,7 +76,7 @@ jobs:
     strategy:
       matrix:
         target: [x64]
-        python-version: ['3.12']
+        python-version: ['3.9', '3.10', '3.11', '3.12', '3.13']
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@ec9f2d5744a09debf3a187a3f4f675c53b671911
@@ -107,7 +109,7 @@ jobs:
       attestations: write  # persist the attestation
     strategy:
       matrix:
-        python-version: ['3.12']
+        python-version: ['3.9', '3.10', '3.11', '3.12', '3.13']
         target: ['universal2', 'x86_64-apple-darwin']
     steps:
       - name: Harden Runner
@@ -151,9 +153,9 @@ jobs:
           allowed-endpoints: >
             api.github.com:443
             github.com:443
-            objects.githubusercontent.com:443
-            static.rust-lang.org:443
             uploads.github.com:443
+            static.rust-lang.org:443
+            release-assets.githubusercontent.com:443
 
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
@@ -163,10 +165,10 @@ jobs:
         with:
           toolchain: "stable"
 
-      - name: Set up Python 3.8
+      - name: Set up Python 3.9
         uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c # v6.0.0
         with:
-          python-version: 3.8
+          python-version: 3.9
 
       - uses: actions/download-artifact@634f93cb2916e3fdff6788551b99b062d0335ce0 # v5.0.0
         with:
