--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,15 @@ build-backend = "maturin"
 
 [project]
 name = "tantivy"
-requires-python = ">=3.8"
-
-[project.optional-dependencies]
-dev = [
-    "nox",
+version = "0.25.0"
+description = "Official Python bindings for the Tantivy search engine"
+requires-python = ">=3.9"
+authors = [
+    { name = "Damir Jelić", email="poljar@termina.org.uk" },
+    { name = "Caleb Hattingh", email = "code@cjrh.info" },
+    { name = "Cam Parry", email = "cam.parry@kapiche.com"}
 ]
+optional-dependencies = { dev = ["nox"] }
 
 [tool.maturin]
 bindings = "pyo3"
