--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["maturin<=1.3.2"]
+requires = ["maturin>=1.0,<2.0"]
 build-backend = "maturin"
 
 [project]
 name = "tantivy"
-version = "0.25.0"
+version = "0.25.1"
 description = "Official Python bindings for the Tantivy search engine"
 requires-python = ">=3.9"
 authors = [
